@@ -78,12 +78,26 @@
             (aref (eieio--class-class-allocation-values class) c)
           (slot-missing obj slot 'oref))
       (cl-check-type obj eieio-object)
-      (let ((value (aref obj c))
-            (columns (closql--slot-get obj slot :closql-columns)))
-        (if columns
+      (let ((value   (aref obj c))
+            (class   (closql--slot-get obj slot :closql-class))
+            (columns (closql--slot-get obj slot :closql-columns))
+            (db      (closql--oref obj 'closql-database)))
+        (cond
+         (class
+          (aset obj c
+                (mapcar (lambda (row)
+                          (closql--remake-instance class db row))
+                        (emacsql db [:select * :from $i1
+                                     :where (= $i2 $s3)
+                                     :order-by [(asc $i4)]]
+                                 (oref-default class closql-table)
+                                 (oref-default class closql-foreign-key)
+                                 (closql--oref
+                                  obj (oref-default obj closql-primary-key))
+                                 (oref-default class closql-primary-key)))))
+         (columns
             (if (eq value eieio-unbound)
-                (pcase-let ((db (closql--oref obj 'closql-database))
-                            (`(,where . ,select) (cl-coerce columns 'list)))
+                (pcase-let ((`(,where . ,select) (cl-coerce columns 'list)))
                   (setq value
                         (emacsql db [:select $i1 :from $i2
                                      :where (= $i3 $s4)
@@ -94,8 +108,9 @@
                   (aset obj c (if (= (length select) 1)
                                   (mapcar #'car value)
                                 value)))
-              value)
-          (eieio-barf-if-slot-unbound value obj slot 'oref))))))
+              value))
+         (t
+          (eieio-barf-if-slot-unbound value obj slot 'oref)))))))
 
 ;;;; Oset
 
@@ -130,59 +145,64 @@
   (let* ((table   (oref-default obj closql-table))
          (key     (oref-default obj closql-primary-key))
          (id      (closql--oref obj key))
+         (class   (closql--slot-get obj slot :closql-class))
          (columns (closql--slot-get obj slot :closql-columns)))
-    (if columns
-        (emacsql-with-transaction db
-          (setq columns (cl-coerce columns 'list))
-          ;; Caller might have modified value in place.
-          (closql--oset obj slot eieio-unbound)
-          (let ((list1 (closql-oref obj slot))
-                (list2 value)
-                elt1 elt2)
-            (when (= (length columns) 2)
-              (setq list1 (mapcar #'list list1))
-              (setq list2 (mapcar #'list list2)))
-            ;; `list2' may not be sorted at all and `list1' has to
-            ;; be sorted because Elisp and SQLite sort differently.
-            (setq list1 (cl-sort list1 'string< :key #'car))
-            (setq list2 (cl-sort list2 'string< :key #'car))
-            (while (progn (setq elt1 (car list1))
-                          (setq elt2 (car list2))
-                          (or elt1 elt2))
-              (let ((key1 (car elt1))
-                    (key2 (car elt2)))
-                (cond
-                 ((and elt1 (or (not elt2) (string< key1 key2)))
-                  (apply #'emacsql db
-                         (vconcat
-                          [:delete-from $i1 :where]
-                          (closql--where-equal (cons id elt1) 1))
-                         slot
-                         (cl-mapcan #'list columns (cons id elt1)))
-                  (pop list1))
-                 ((string= key1 key2)
-                  (unless (equal elt1 elt2)
-                    (cl-mapcar
-                     (lambda (col val1 val2)
-                       (unless (equal val1 val2)
-                         (emacsql db [:update $i1 :set (= $i2 $s3)
-                                      :where (and (= $i4 $s5) (= $i6 $s7))]
-                                  slot col val2
-                                  (car  columns) id
-                                  (cadr columns) key2)))
-                     (cddr columns)
-                     (cdr  elt1)
-                     (cdr  elt2)))
-                  (pop list1)
-                  (pop list2))
-                 (t
-                  (emacsql db [:insert-into $i1 :values $v2]
-                           slot (vconcat (cons id elt2)))
-                  (pop list2)))))))
+    (cond
+     (class
+      (error "Not implemented for closql-class slots: oset"))
+     (columns
+      (emacsql-with-transaction db
+        (setq columns (cl-coerce columns 'list))
+        ;; Caller might have modified value in place.
+        (closql--oset obj slot eieio-unbound)
+        (let ((list1 (closql-oref obj slot))
+              (list2 value)
+              elt1 elt2)
+          (when (= (length columns) 2)
+            (setq list1 (mapcar #'list list1))
+            (setq list2 (mapcar #'list list2)))
+          ;; `list2' may not be sorted at all and `list1' has to
+          ;; be sorted because Elisp and SQLite sort differently.
+          (setq list1 (cl-sort list1 'string< :key #'car))
+          (setq list2 (cl-sort list2 'string< :key #'car))
+          (while (progn (setq elt1 (car list1))
+                        (setq elt2 (car list2))
+                        (or elt1 elt2))
+            (let ((key1 (car elt1))
+                  (key2 (car elt2)))
+              (cond
+               ((and elt1 (or (not elt2) (string< key1 key2)))
+                (apply #'emacsql db
+                       (vconcat
+                        [:delete-from $i1 :where]
+                        (closql--where-equal (cons id elt1) 1))
+                       slot
+                       (cl-mapcan #'list columns (cons id elt1)))
+                (pop list1))
+               ((string= key1 key2)
+                (unless (equal elt1 elt2)
+                  (cl-mapcar
+                   (lambda (col val1 val2)
+                     (unless (equal val1 val2)
+                       (emacsql db [:update $i1 :set (= $i2 $s3)
+                                    :where (and (= $i4 $s5) (= $i6 $s7))]
+                                slot col val2
+                                (car  columns) id
+                                (cadr columns) key2)))
+                   (cddr columns)
+                   (cdr  elt1)
+                   (cdr  elt2)))
+                (pop list1)
+                (pop list2))
+               (t
+                (emacsql db [:insert-into $i1 :values $v2]
+                         slot (vconcat (cons id elt2)))
+                (pop list2))))))))
+     (t
       (emacsql db [:update $i1 :set (= $i2 $s3) :where (= $i4 $s5)]
                table slot
                (if (eq value eieio-unbound) 'eieio-unbound value)
-               key id))))
+               key id)))))
 
 ;;;; Slot Properties
 
@@ -198,7 +218,7 @@
                            :key #'cl--slot-descriptor-name))))
     (and s (cdr (assoc prop (cl--slot-descriptor-props s))))))
 
-(defconst closql--slot-properties '(:closql-columns))
+(defconst closql--slot-properties '(:closql-class :closql-columns))
 
 (defun eieio-defclass-internal--set-closql-slot-props
     (cname _superclasses slots _options)
